# rethinking-numpyro

./: pyproject.toml
notebooks/: 03_sampling_the_imaginary.ipynb  04_geocentric_models.ipynb  05_the_many_variables_and_the_spurious_waffles.ipynb  06_the_haunted_dag_and_the_causal_terror.ipynb  07_ulysses_compass.ipynb  08_conditional_manatees.ipynb  09_markov_chain_monte_carlo.ipynb  10_big_entropy_and_the_generalized_linear_model.ipynb  11_god_spiked_the_integers.ipynb  12_monsters_and_mixtures.ipynb  13_models_with_memory.ipynb  14_adventures_in_covariance.ipynb  15_missing_data_and_other_opportunities.ipynb  notes.md
src/: utils.py
